Fix burger button on small screen

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -16,8 +16,13 @@
     cursor: pointer;
 
     @include respond(tab-port) {
-      top: 4rem;
-      right: 4rem;
+      top: 4.5rem;
+      right: 4.5rem;
+    }
+
+    @include respond(phone) {
+      top: 3rem;
+      right: 3rem;
     }
   }
   &__background {
@@ -34,8 +39,17 @@
     z-index: 1000;
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 
-    // transform: scale(80);
+    @include respond(tab-port) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
+
+    @include respond(phone) {
+      top: 3rem;
+      right: 3rem;
+    }
   }
+
   &__nav {
     height: 100vh;
     position: fixed;
